[project]
name = "datox-server"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "pydantic==2.10.4",
  "pydantic-settings==2.7.0",
  "SQLAlchemy==2.0.36",
  "psycopg[binary]==3.2.3",
  "alembic==1.14.0",
  "python-jose[cryptography]==3.3.0",
  "passlib[bcrypt]==1.7.4",
  "httpx==0.28.1",
  "redis==5.2.1",
  "boto3==1.35.77",
  "orjson==3.10.12",
  "tenacity==9.0.0",
  "pytest==8.3.4",
  "pytest-asyncio==0.25.2",
  "faker==33.1.0",
  "webauthn>=2.0.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
